<resources>
    <string name="app_name">Finanfy</string>
    <string name="tipoMovimientos">Select a type</string>
    <string name="textoNominas">Select a Payslip</string>
    <string name="textoAnios">Select a year</string>
    <string-array name="tipoMovimientosArray">
        <item>Expense</item>
        <item>Payslip</item>
        <item>Entry</item>
        <item>Invoice</item>
    </string-array>
    <string-array name="tipoEditMovimientosArray">
        <item>Expense</item>
        <item>Payslip</item>
        <item>Entry</item>
    </string-array>
    <string-array name="tipoFiltroResumen">
        <item>Classic</item>
        <item>Categories</item>
        <item>Subcategories</item>
    </string-array>
    <string name="mes">Month</string>
    <string-array name="mesArray">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="nominasArray">
        <item>-</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="enero">January</string>
    <string name="febrero">February</string>
    <string name="marzo">March</string>
    <string name="abril">April</string>
    <string name="mayo">May</string>
    <string name="junio">June</string>
    <string name="julio">July</string>
    <string name="agosto">August</string>
    <string name="septiembre">September</string>
    <string name="octubre">October</string>
    <string name="noviembre">November</string>
    <string name="diciembre">December</string>
    <string-array name="filtroArray">
        <item>-</item>
        <item>Category</item>
        <item>Subcategory</item>
    </string-array>
    <string name="tipoFiltro">Choose an option</string>
    <string name="categorias">Categories</string>
    <string name="subcategorias">Subcategories</string>
    <string name="categoriasMay">CATEGORIES</string>
    <string name="subcategoriasMay">SUBCATEGORIES</string>
    <string-array name="opcionesInformesArray">
        <item>Payslip</item>
        <item>Date</item>
    </string-array>
    <string name="tipo">Type</string>
    <string name="nuevoRegistro">New Register</string>
    <string name="editarRegistro">Edit Register</string>
    <string name="cantidad">Quantity</string>
    <string name="concepto">Concept</string>
    <string name="seleccioneFecha">Select a Date</string>
    <string name="categoria">Category</string>
    <string name="subcategoria">Subcategory</string>
    <string name="pagadoTarjeta">Paid with credit card</string>
    <string name="guardar">Save</string>
    <string name="resumen">Summary</string>
    <string name="nomina">Payslip</string>
    <string name="anio">Year</string>
    <string name="mostrarPor">Show by</string>
    <string name="total">Total: </string>
    <string name="resumenTarjeta">Credit Card Summary</string>
    <string name="creditCard">Credit Card</string>
    <string name="estadisticas">Statistics</string>
    <string name="infoGlobal">Global information</string>
    <string name="totalIngresos">Total Entries</string>
    <string name="totalGastos">Total expenses</string>
    <string name="balance">Balance</string>
    <string name="infoRegistros">Register information</string>
    <string name="nRegistros">Amount of registers</string>
    <string name="nIngresos">Amount of entries</string>
    <string name="nGastos">Amount de expenses</string>
    <string name="infoCategorias">Categories information</string>
    <string name="nTotalCategorias">Total amount of categories</string>
    <string name="nCategorias">Amount of categories</string>
    <string name="nSubcategorias">Amount of subcategories</string>
    <string name="configuracion">Options</string>
    <string name="tituloEstilos">Select a style</string>
    <string name="tituloSeguridad">Security options</string>
    <string name="tituloValorar">Rate the app</string>
    <string name="botonValorar">Rate it now</string>
    <string name="botonMasTarde">Later</string>
    <string name="msgValorar1">If you like the app and consider it usefull, please recomend it.</string>
    <string name="msgValorar2">you can rate it with 5 stars only in 1 minute.</string>
    <string name="msgValorar3">Thank you very much.</string>
    <string name="tituloDonar">Donation</string>
    <string name="botonDonar">Donate now</string>
    <string name="msgDonar1">If you like the app help us to improve it.</string>
    <string name="msgDonar2">Every donation will be grateful, it only takes you a minute.</string>
    <string name="msgDonar3">Thank you very much</string>
    <string name="activarPass">Activate password</string>
    <string name="desactivarPass">Desactivate password</string>
    <string name="modificarPass">Modify Password</string>
    <string name="nuevaPass">New Password (Min. 4)</string>
    <string name="repetirPass">Repeat Password (Min. 4)</string>
    <string name="antiguaPass">Last Password</string>
    <string name="introducirPass">Put Password</string>
    <string name="passActivada">Password ON</string>
    <string name="passDesactivada">Password off</string>
    <string name="exportar">Export</string>
    <string name="importar">Import</string>
    <string name="reset">Reset</string>
    <string name="msgExportar">The data base will be saved in this route: </string>
    <string name="msgImportar">For a correctly import, the database must be in this route.</string>
    <string name="ruta">/sdcard/Finanfy/</string>
    <string name="tituloMenuBD">Data base options</string>
    <string name="importarOK">Database imported correctly </string>
    <string name="importarError">An error ocurred during the import of the database.</string>
    <string name="exportOK">Database exported correctly</string>
    <string name="exportError"> An error ocurred during the exportation of the database.</string>
    <string name="crear">Create</string>
    <string name="cancelar">Cancel</string>
    <string name="eliminar">Delete</string>
    <string name="editar">Edit</string>
    <string name="msnEliminar">Are you sure you want delete the category? All the vinculated registers will be modified.</string>
    <string name="msnEditar">The modification will be apply to all the vinculated registers.</string>
    <string name="aniadir">Add</string>
    <string name="info">Information</string>
    <string name="aceptar">Accept</string>
    <string name="atencion">Attention</string>
    <string name="catEditOK">The category has been edited successfully.</string>
    <string name="catEditKO">An error ocurred during the editation of the category.</string>
    <string name="subEditOK">The subcategory has been edited successfully.</string>
    <string name="subEditKO">An error ocurred during the editation of the subcategory.</string>
    <string name="catDeleteOK">The category has been deleted successfully.</string>
    <string name="catDeleteKO">An error ocurred during the remove of the category.</string>
    <string name="subDeleteOK">The subcategory has been deleted successfully.</string>
    <string name="subDeleteKO">An error ocurred during the remove of the subcategory.</string>
    <string name="guardarRegistroOK">The register has been saved successfully.</string>
    <string name="guardarRegistroKO">An error ocurred during the saved of the archive. Please, check out the data.</string>
    <string name="editarRegistroOK">The register has been edited successfully.</string>
    <string name="editarRegistroKO"> An error ocurred during the editation of the register subcategory.	Please, check out the data.</string>
    <string name="errorNomina">Already exist a payslip for the selected month.</string>
    <string name="camposObligatorios">Amount and concept sections are obligatory. Check out that the information is correct.</string>
    <string name="elijaOpcion">Select an option</string>
    <string name="espere">Please wait...</string>
    <string name="preparandoBD">Preparing Database...</string>
    <string name="deleteRegistroOk">The register has been removed successfully.</string>
    <string name="deleteRegistroError">An error ocurred during the removed of the register.</string>
    <string name="addCatOk">The category has been created.</string>
    <string name="addCatKO">An error ocurred during the creation of the category.</string>
    <string name="addSubOK">The subcategory has been created.</string>
    <string name="addSubKO">An error ocurred during the creation of the category.</string>
    <string name="msnEliminarRegistro">Are you sure you want delete the category?</string>
    <string name="msnSalirApp">Are you sure you want to exit?</string>
    <string name="msnResetDB">Are you sure you want reset the database?</string>
    <string name="msnRecuerdeDB">Remember that all the register and categories will be deleted.</string>
    <string name="version">Version 3.2.1</string>
    <string name="cambio1">1. Complete redesign of the application.</string>
    <string name="cambio2">2. New icon.</string>
    <string name="cambio3">3. Pro functionalities unlocked. (Receipts, reports, etc...)</string>
    <string name="informacion">Information</string>
    <string name="aniadirCategoria">Add category </string>
    <string name="aniadirSubcategoria">Add subcategory</string>
    <string name="editarCategoria">Edit category</string>
    <string name="editarSubcategoria">Edit subcategory</string>
    <string name="eliminarCategoria">Delete category</string>
    <string name="eliminarSubcategoria">Delete subcategory </string>
    <string name="selecCategoria">Select a category</string>
    <string name="selecSubcategoria">Select a subcategory</string>
    <string name="acerca">About</string>
    <string name="database">Database</string>
    <string name="volver">Back</string>
    <string name="msnDBOk">Database reset properly.</string>
    <string name="msnDBError">An error ocurred during the reset of the database.</string>
    <string name="msnDesarrollador">This app has been created by AGBA Android Apps.</string>
    <string name="msnIncidencias">If you have any problem with the app or find a mistake, please send us an email:</string>
    <string name="msnEmail">info@finanfy.com</string>
    <string name="msnSugerencias">Please, send us your suggestions, thank you very much. </string>
    <string name="cargando">Loading...</string>
    <string name="todas">All</string>
    <string name="generarExcel">Generate Excel</string>
    <string name="generarGrafico">Generate graphic</string>
    <string name="nombreFichero">File Name </string>
    <string name="generarPor">Generate by</string>
    <string name="selecNomina">Select a payslip </string>
    <string name="desde">From</string>
    <string name="hasta">To </string>
    <string name="generar">Generate</string>
    <string name="mostrarCategorias">Show categories</string>
    <string name="rutaExcel">The Excel file will be saved in that route: </string>
    <string name="mismoFichero">If exist a file with the same name, it will be replaced.</string>
    <string name="excelOK">The Excel file has been generated successfully.</string>
    <string name="excelKO">An error ocurred during the generation of the Excel.</string>
    <string name="errorExcel">Please, check out the information, the date range is not correct.</string>
    <string name="tituloGraficos">Graphics</string>
    <string name="tituloInformes">Reports</string>
</resources>